<resources>
    <string name="app_name">uAlarm</string>
    <string name="action_settings">Settings</string>

    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="api_key">AIzaSyAUKQ8H3cEYjPTCHVin1i6r3mlk4xFkglc</string>
    <string name="no_alarms">No alarms yet. \nClick \'+\' to add an alarm.</string>

    <!-- AddAlarmActivity -->
    <string name="alarm">Alarm</string>
    <string name="add_alarm">Add New Alarm</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="set_time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="set_repeat">Set Repeat</string>
    <string name="no_repeat">no repeat</string>
    <string name="never">never</string>
    <string name="action_alarm_save">Save Alarm</string>
    <string name="location_header">Commute</string>
    <string name="set_start_location">Choose Starting Point</string>
    <string name="set_end_location">Destination</string>
    <string name="not_set">Not Set</string>
    <string name="action_loc_save">Save Location</string>
    <string name="more_options">More Options</string>
    <string name="set_departure_time">Departure Time</string>
    <!-- Snackbar -->
    <string name="loc_not_selected">Choose a location before saving.</string>
    <string name="locs_not_selected">Set starting &amp; ending points before saving.</string>

    <!-- Snackbar -->
    <string name="alarm_not_saved">Alarm not saved.</string>
    <string name="alarm_saved">Alarm saved.</string>
    <string name="alarm_deleted">Alarm deleted.</string>
    <string name="alarm_set">Alarm set for %s from now.</string>
    <string name="alarm_cancelled">Alarm cancelled.</string>
    <string name="alarm_set_error">Error setting alarm.</string>

    <!-- Notification -->
    <string name="alarm_notification_title">Alarm going off!</string>
    <string name="stop">Stop</string>
    <string name="snooze">Snooze</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="delete_alarm">Delete Alarm</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_home_location">Home</string>
    <string name="pref_default_home_location">Toronto, ON</string>
    <string name="pref_title_work_location">Work</string>
    <string name="pref_default_work_location">CN Tower</string>

    <!-- Alarm Settings -->
    <string name="pref_header_alarm">Alarm</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_title_snooze_length">Snooze Length</string>
    <string-array name="pref_snooze_list_titles">
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
    </string-array>
    <string-array name="pref_snooze_list_values">
        <item>60</item>
        <item>120</item>
        <item>300</item>
        <item>600</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_repeat">RepeatActivity</string>
    <string name="title_activity_youtube">YoutubeActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_youtube_play">YoutubePlayActivity</string>
</resources>
